       search for one-parameter copulas.
4. Standardized all *.Rd files to utf8 encoding declaration whether needed or no.


Version 2.1.2--
1. Added m=NA argument to aicCOP() and bicCOP() to pass the number of parameters
       of the copula. Trivial to compute the number from standard copulas,
       the problem is how to handle the compositing types. 
2. Added warning of missing alpha or beta parameters in composite1COP and
       composite2COP. Small speed it, but debugging when these are not given 
       (forgotten) becomes complicated. (See #3 and #4)
3. Added warning of missing kappa or gamma parameters in composite3COP.
       (See #2 and #4)
4. Added warning of missing alpha in convex2COP() (See #2 and #3)


POTENTIAL TODOs:

Vectorization problem in convexCOP.R needs to be fixed.

\author{William Asquith \email{william.asquith@ttu.edu} }
  Make such conversions through out or go back to W.H. Asquith?

EMPIRcopdf() can be replaced by EMPIRcop() as the later is fully 
  vectorized itself and makes presumably a lesser impact on memory (faster)?

aic/bicCOP() need m parameter length. These needs generalization to
  composited and convex copulas. Currently, only checking length(para).

stabtaildepf.Rd --- Need to audit stabtaildepf.Rd and complete documentation.

EMPIRcop.Rd --- Need to audit level.curves in the Examples.

Implementation of state-of-the-practice nonparametric estimators of
  lower and upper tail dependence parameters. Neither of the three books
  cited within deal with this. A turn towards recommended literature by
  Joe (2014) is needed.

Goodness-of-fit of the Kendall Function following Genest et. al. (2006,
  Goodness-of-fit procedures for copula models based on the probability
  integral transformation: Scand J. Statist 33.

Convergence evaluators for the Monte Carlo integration in bilmoms() and
  kullCOP() to enhance computation times.

rhobevCOP() study for a copula yielding 0.
