@@ -125,6 +125,7 @@ export(tailconCOP)
 export(taildepCOP)
 export(tailordCOP)
 export(tauCOP)
+export(tEVcop)
 export(uvskew)
 export(uvlmoms)
 export(vuongCOP)
